[gd_scene load_steps=17 format=2]

[ext_resource path="res://Recursos/Players/bunny2_stand.png" type="Texture" id=1]
[ext_resource path="res://Juego/Personaje/Wendy.gd" type="Script" id=2]
[ext_resource path="res://Recursos/Players/bunny2_jump.png" type="Texture" id=3]
[ext_resource path="res://Recursos/Players/bunny2_walk1.png" type="Texture" id=4]
[ext_resource path="res://Recursos/sonido/Jump 3.wav" type="AudioStream" id=5]
[ext_resource path="res://Recursos/Players/bunny2_walk2.png" type="Texture" id=6]
[ext_resource path="res://Recursos/Items/wing_right.png" type="Texture" id=7]
[ext_resource path="res://Recursos/Items/wing_left.png" type="Texture" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 1 ), ExtResource( 6 ) ],
"loop": true,
"name": "idle",
"speed": 2.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "saltar",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 6 ) ],
"loop": true,
"name": "correr",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 40.1886
height = 71.7397

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 44.5795, 7.64906 )

[sub_resource type="Animation" id=4]
resource_name = "aclarar"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.984314, 1, 1 ), Color( 1, 0.984314, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=5]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("wing_left:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_right:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=6]
tracks/0/type = "value"
tracks/0/path = NodePath("Animacion:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Animacion:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "oscurecer"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("CanvasLayer/ColorRect:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("CanvasLayer/ColorRect:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 0.984314, 1, 0 ), Color( 1, 0.984314, 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
length = 0.8
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("wing_left:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 0.0, -80.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("wing_right:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, -10.0, 0.0, 80.0, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("wing_left:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("wing_right:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="Wendy" type="KinematicBody2D" groups=[
"tambo",
]]
scale = Vector2( 0.5, 0.5 )
z_index = 50
z_as_relative = false
collision_layer = 2
collision_mask = 8
script = ExtResource( 2 )
velocidad = Vector2( 400, 800 )
acel_caida = 280
fuerza_salto = 2800

[node name="wing_left" type="Sprite" parent="."]
visible = false
position = Vector2( -51.9738, -1.68501 )
texture = ExtResource( 8 )
offset = Vector2( -37.6109, -14.3027 )

[node name="wing_right" type="Sprite" parent="."]
visible = false
position = Vector2( 49.7347, -0.625549 )
texture = ExtResource( 7 )
offset = Vector2( 39.7299, -14.8325 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
texture = ExtResource( 1 )

[node name="Animacion" type="AnimatedSprite" parent="."]
position = Vector2( 1, -4 )
frames = SubResource( 1 )
animation = "idle"
frame = 1

[node name="Collisioncuerpo" type="CollisionShape2D" parent="."]
position = Vector2( -2, 16 )
shape = SubResource( 2 )

[node name="Collisionpies" type="CollisionShape2D" parent="."]
position = Vector2( 0.529724, 92.1732 )
shape = SubResource( 3 )

[node name="audiosalto" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.194

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.6, 1.6 )
limit_left = -2000
limit_bottom = 2000
drag_margin_h_enabled = true
drag_margin_v_enabled = true
drag_margin_left = 0.1
drag_margin_right = 0.1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/aclarar = SubResource( 4 )
anims/default = SubResource( 5 )
anims/entrar_portal = SubResource( 6 )
anims/oscurecer = SubResource( 7 )
anims/volar = SubResource( 8 )

[node name="EnfriamientoPowerUpsalto" type="Timer" parent="."]
wait_time = 1.5

[node name="enfriamientoPowerUpvolar" type="Timer" parent="."]
wait_time = 2.0

[node name="Tween" type="Tween" parent="."]

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
modulate = Color( 1, 0.984314, 1, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.00784314, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="EnfriamientoPowerUpsalto" to="." method="_on_EnfriamientoPowerUp_timeout"]
[connection signal="timeout" from="enfriamientoPowerUpvolar" to="." method="_on_enfriamientoPowerUpvolar_timeout"]
